[package]
name = "api"
version = "0.1.0"
authors = ["Dawson Israel <dawfre@amazon.com>"]
edition = "2018"

[dependencies]
lambda_runtime = "0.2.1"
serde = "1.0.104"
serde_derive = "1.0.104"
simple_logger = "1.4.0"
simple-error = "0.2.1"
log = "0.4.8"
chrono = "0.4.10"
rusoto_core = "0.42.0"
rusoto_dynamodb = "0.42.0"